--- a/AtvJavaScript/index.html
+++ b/AtvJavaScript/index.html
@@ -4,33 +4,37 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Calculadora</title>
 </head>
 <body>
-    <div>
-        <h1>Dados do Cliente</h1>
-    </div>
-    <div>
-        Adicionar Dados <br />
+    <h1>Calculadora</h1>
+    <div class="container">
+        <div class="box">
+            <h2> Dados do Cliente</h2>
+            <div>
+                Salário: <input sal_="sal_input" id="salario" type="number" max="default" />
+                </p>
+                Aliquota IRRF: <input aliq="aliqinput" id="aliquota" type="number" max="15" maxlength="15" />
+                </p>
+                INSS: <input inss="inssinput" type="number" id="inss" max="20" maxlength="20" />
+                </p>
+                Salário Líquido: <input sal_liq="sal_liqinput" id="salario liquido" type="number" />
+                <br />
+                <button onclick="Calcular()">Calcular</button>
+                <button onclick="KarolcomK()">Limpar</button>
 
-        Salário: <input sal_="sal_input" id="salario" type="number" max="default" />
-        </p>
-        Aliquota IRRF: <input aliq="aliqinput" id="aliquota" type="number" max="15" maxlength="15" />
-        </p>
-        INSS: <input inss="inssinput" type="number" id="inss" max="20" maxlength="20" />
-        </p>
-        Salário Líquido: <input sal_liq="sal_liqinput" id="salario liquido" type="number" />
-        <br />
-        <button onclick="Calcular()">Calcular</button>
-        <button onclick="KarolcomK()">Limpar</button> 
-
+            </div>
+        </div>
     </div>
+  
+    
     <script>
         function Calcular() {
             var salario = document.getElementById('salario').value;
             var aliquota = document.getElementById('aliquota').value;
             var inss = document.getElementById('inss').value;
-          
+
 
             var a = salario * (aliquota / 100)
             var b = salario * (inss / 100)
@@ -44,6 +48,6 @@
             document.getElementById('inss').value = "";
         }
     </script>
-</body>
+</body>  
 
 </html>
